# reaper

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
crates/reaper/: Cargo.toml  build.rs
crates/reaper-core/: Cargo.toml  rules.toml
crates/reaper-core/src/: classify.rs  lib.rs  model.rs  plan.rs  policy.rs  ports.rs  registry.rs
crates/reaper-core/tests/: classify_props.rs  dep_allowlist.rs
crates/reaper-scan/: Cargo.toml
crates/reaper-scan/src/: deleter.rs  gitprobe.rs  lib.rs  orchestrator.rs  prober.rs
crates/reaper-scan/src/dirread/: linux.rs  macos.rs  mod.rs  parse.rs  windows.rs
crates/reaper-scan/src/sweep/: linux.rs  macos.rs  mod.rs  windows.rs
crates/reaper-scan/tests/: bench_gate.rs  differential.rs  gitprobe_oracle.rs  launch_coverage.rs  sweep_detects.rs
crates/reaper-tui/: Cargo.toml
crates/reaper-tui/src/: lib.rs
crates/reaper/src/: main.rs  update.rs
crates/reaper/tests/: reap_e2e.rs  scan_json.rs  self_update.rs
docs/: prior-art.md
