[workspace]
resolver = "2"
members = ["crates/reaper-core", "crates/reaper-scan", "crates/reaper-tui", "crates/reaper"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"

[workspace.dependencies]
reaper-core = { path = "crates/reaper-core" }
reaper-scan = { path = "crates/reaper-scan" }
camino = { version = "1", features = ["serde1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
debug = true
